fixed some spacing

--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -10,7 +10,8 @@
 
 .projects-section h2 {
   font-size: 2rem;
-  margin-bottom: 35px;
+  margin-bottom: 20px;
+  padding-top: 20px;
   color: var(--primary-color);
   font-family: 'Lora', serif;
   text-align: left;
